# kitkit-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-08-kitkit-cli-skills-pack.md
docs/superpowers/specs/: 2026-06-08-kitkit-cli-skills-design.md
kitkit-sdk/: Cargo.toml
kitkit-sdk/src/: auth.rs  client.rs  error.rs  lib.rs  sessions.rs  shared_memory.rs  spaces.rs
kitkit-sdk/tests/: live_api.rs
skills/kitkit-as-kitty/: SKILL.md
skills/kitkit-cli/: SKILL.md
skills/kitkit-conversation-tree/: SKILL.md
skills/kitkit-fork/: SKILL.md
skills/kitkit-insight/: SKILL.md
src/: api_client.rs  auth.rs  auth_store.rs  cli.rs  input.rs  main.rs  output.rs  session.rs  shared_memory.rs  space.rs
