[workspace]
resolver = "3"
members = ["kitkit-sdk"]

[workspace.package]
authors = ["uchouT <i@uchout.moe>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1" }
serde_json = { version = "1" }

[package]
name = "kitkit-cli"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kitkit-sdk = { version = "0.1.0", path = "kitkit-sdk" }
