[package]
name = "kitkit-sdk"
version = "0.1.0"
description = "Rust SDK for the KitKit REST API."
keywords = ["kitkit", "sdk", "api", "agent", "memory"]
categories = ["api-bindings"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
